--- a/unibot_project/unibot_frontend/public/index.html
+++ b/unibot_project/unibot_frontend/public/index.html
@@ -1,19 +1,31 @@
 <!DOCTYPE html>
-<html lang="ar" dir="rtl">  <!-- RTL و عربية افتراضيًا (Default RTL for Arabic) -->
+<html lang="ar" dir="rtl">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+
+    <!-- أيقونة التبويب (SVG) -->
+    <link rel="icon" type="image/svg+xml" href="%PUBLIC_URL%/favicon.svg?v=1" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#0ea5e9" />
     <meta name="description" content="Unibot - شاتبوت الجامعة" />
     <title>Unibot - شاتبوت الجامعة</title>
-    <!-- Bootstrap RTL CSS (Bootstrap RTL for Arabic) -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.rtl.min.css" integrity="sha384-8uV6wXtO10Sw8TPJoc5b4q4V4r1r1m7Q5m5k7g8y3a4b6c9d2e0f1" crossorigin="anonymous">
-    <!-- Bootstrap JS (Bootstrap JS) -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
+    <!-- Bootstrap RTL (بدون integrity عشان ما يتوقف التحميل) -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.rtl.min.css"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      crossorigin="anonymous"
+      defer
+    ></script>
   </head>
+
   <body>
-    <noscript>تحتاج إلى تمكين JavaScript لتشغيل هذا التطبيق. (You need to enable JavaScript to run this app.)</noscript>
+    <noscript>تحتاج إلى تمكين JavaScript لتشغيل هذا التطبيق.</noscript>
     <div id="root"></div>
   </body>
 </html>
