--- a/unibot_project/unibot_frontend/public/index.html
+++ b/unibot_project/unibot_frontend/public/index.html
@@ -3,15 +3,21 @@
   <head>
     <meta charset="utf-8" />
 
-    <!-- أيقونة التبويب (SVG) -->
-    <link rel="icon" type="image/svg+xml" href="%PUBLIC_URL%/favicon.svg?v=1" />
+    <!-- أيقونات الموقع لجميع الأجهزة والمتصفحات -->
+    <link rel="icon" type="image/png" href="%PUBLIC_URL%/favicon-96x96.png" sizes="96x96" />
+    <link rel="icon" type="image/svg+xml" href="%PUBLIC_URL%/favicon.svg" />
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/apple-touch-icon.png" />
+    <link rel="manifest" href="%PUBLIC_URL%/site.webmanifest" />
 
+    <!-- إعدادات عامة -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#0ea5e9" />
     <meta name="description" content="Unibot - شاتبوت الجامعة" />
+
     <title>Unibot - شاتبوت الجامعة</title>
 
-    <!-- Bootstrap RTL (بدون integrity عشان ما يتوقف التحميل) -->
+    <!-- Bootstrap RTL -->
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.rtl.min.css"
