--- a/unibot_project/unibot_frontend/public/index.html
+++ b/unibot_project/unibot_frontend/public/index.html
@@ -3,12 +3,16 @@
   <head>
     <meta charset="utf-8" />
 
-    <!-- أيقونات الموقع لجميع الأجهزة والمتصفحات -->
-    <link rel="icon" type="image/png" href="%PUBLIC_URL%/favicon-96x96.png" sizes="96x96" />
-    <link rel="icon" type="image/svg+xml" href="%PUBLIC_URL%/favicon.svg" />
+    <!-- 🧠 Unibot favicon لجميع الأجهزة والمتصفحات -->
+    <link rel="icon" type="image/svg+xml" href="%PUBLIC_URL%/unibot-logo.svg" />
+    <link rel="icon" type="image/png" sizes="96x96" href="%PUBLIC_URL%/favicon-96x96.png" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/apple-touch-icon.png" />
     <link rel="manifest" href="%PUBLIC_URL%/site.webmanifest" />
+    <meta name="theme-color" content="#0ea5e9" />
+    <meta name="apple-mobile-web-app-title" content="Unibot" />
+    <meta name="application-name" content="Unibot" />
+
 
     <!-- إعدادات عامة -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
